--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,19 +1,21 @@
 on: [push]
 
-
 name: AzureLoginSample
 
 jobs:
-  build-and-deploy:
+build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Log in with Azure
+
+    - name: Log in with Azure
         uses: azure/login@v1
         with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          enable-AzPSSession: true
-      - name: Azure PowerShell Action
-        uses: Azure/powershell@v1
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Azure CLI script
+        uses: azure/CLI@v1
         with:
-          inlineScript: Get-AzVM -ResourceGroupName "githubtest"
-          azPSVersion: 3.1.0
+        azcliversion: 2.0.72
+        inlineScript: |
+            az account show
+            az storage -h
