--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,26 +1,18 @@
 on: [push]
 
-name: AzurePowerShellSample
+name: AzureLoginSample
 
 jobs:
-
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-
-    - name: Login via Az module
-      uses: azure/login@v1
-      with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
-        enable-AzPSSession: true
-
-    - name: Run Az CLI script
-      run: |
-        az webapp list --query "[?state=='Running']"
-
-    - name: Run Azure PowerShell script
-      uses: azure/powershell@v1
-      with:
-        azPSVersion: '3.1.0'
-        inlineScript: |
-          Get-AzVM -ResourceGroupName "ActionsDemo"
+      - name: Log in with Azure
+        uses: azure/login@v1
+        with:
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          enable-AzPSSession: true
+      - name: Azure PowerShell Action
+        uses: Azure/powershell@v1
+        with:
+          inlineScript: Get-AzVM -ResourceGroupName "< YOUR RESOURCE GROUP >"
+          azPSVersion: 3.1.0
