--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,5 +14,5 @@ jobs:
       - name: Azure PowerShell Action
         uses: Azure/powershell@v1
         with:
-          inlineScript: Get-AzVM -ResourceGroupName "< YOUR RESOURCE GROUP >"
+          inlineScript: Get-AzureVM -ResourceGroupName "githubtest"
           azPSVersion: 3.1.0
