--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -3,17 +3,20 @@ on: [push]
 name: AzureLoginSample
 
 jobs:
-  build-and-deploy:
+
+ build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Log in with Azure
-        uses: azure/login@v1
-        with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          enable-AzPSSession: true
-      - name: Azure PowerShell Action
-        uses: Azure/powershell@v1
-        with:
-          Install-Module -Name Az -AllowClobber -Scope CurrentUser
-          inlineScript: Get-AzureVM -ResourceGroupName "githubtest"
-          azPSVersion: 3.1.0
+
+    - name: Log in with Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.0.72
+        inlineScript: |
+            az account show
+            az storage -h
